# streamgenius

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/stream_processor/: __init__.py  enrichment.py  main.py  spotify_processor.py  summarization.py  text_processor.py  transcription.py  translation.py  youtube_processor.py
tests/: test_enrichment.py  test_summarization.py  test_transcription.py  test_translation.py  test_youtube_processor.py
