[tool.poetry]
name = "stream-processor"
version = "0.1.0"
description = "A project to transcribe, translate, summarize, and enrich streaming content from YouTube and Spotify"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube-dl = "^2021.12.17"
spotipy = "^2.19.0"
transformers = "^4.18.0"
torch = "^1.11.0"
nltk = "^3.7"
soundfile = "^0.10.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
